<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/seekbar_dialog_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dip" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/master_volume" />

    <SeekBar
        android:id="@+id/seekbar_dialog_seekbar_master_volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dip" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_alarm" />

    <SeekBar
        android:id="@+id/seekbar_dialog_seekbar_alarm_volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dip" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm_prealarm" />
    
    <SeekBar
        android:id="@+id/seekbar_dialog_seekbar_prealarm_volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dip" />

</LinearLayout>